--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -8,7 +8,7 @@
         android:id="@+id/memo"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="먹은 것을 입력해주세요"
+        android:hint="먹은 음식들을 입력해주세요"
         android:gravity="center"
         android:background="@android:color/transparent"/>
 
